@@ -3,6 +3,14 @@
 package Google::Chart::Title;
 use Moose;
 use Google::Chart::Types;
+use Moose::Util::TypeConstraints;
+
+coerce 'Google::Chart::Title'
+    => from 'HashRef'
+    => via {
+        Google::Chart::Title->new(%$_);
+    }
+;
 
 with 'Google::Chart::QueryComponent';
 
@@ -29,7 +37,7 @@ no Moose;
 sub as_query {
     my $self = shift;
 
-    my $text = $self->title;
+    my $text = $self->text;
     $text =~ s/\r?\n/|/gsm;
     my %data = (
         chtt => $text
